# x11q

./: Cargo.toml  README.md
.github/workflows/: ci.yml
aur/: .SRCINFO  PKGBUILD  PKGBUILD-git
src/: display.rs  main.rs  mirror.rs  rendezvous.rs  test_server.rs  web.rs
x11q-web/: Cargo.toml
x11q-web/.cargo/: config.toml
x11q-web/src/: atom.rs  drawable.rs  gc.rs  input.rs  lib.rs  renderer.rs  server.rs  shader.wgsl  window.rs
x11q-web/www/: index.html  main.js
