[package]
name = "x11q"
version = "0.5.0"
edition = "2021"
authors = ["Rotko Networks <hq@rotko.net>"]
description = "X11 display forwarding over QUIC with P2P holepunching - lowest latency remote desktop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rotkonetworks/x11q"
keywords = ["x11", "quic", "remote-desktop", "low-latency", "p2p"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
# P2P networking with holepunching
iroh = { version = "0.35", features = ["discovery-pkarr-dht"] }
iroh-base = "0.35"

# rendezvous over mainline dht
pkarr = { version = "3", features = ["dht"] }
spake2 = "0.4"
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Mirror mode dependencies
x11rb = { version = "0.13", features = ["shm", "damage", "xtest", "randr"] }
minifb = "0.27"
zstd = "0.13"

# Web mode dependencies
tokio-tungstenite = "0.26"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = "0.3"
include_dir = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
